# EntropicMem

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MASTER_TODO.md  PROJECT_PLAN.md  PROJECT_ROOT.md  README.md  RELEASE-CHECKLIST.md  RISKS.md  SETUP.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  COMPARISON.md  COMPARISON_TABLE.md  CRON_MEMORY_PATH.md  ENTROPICMEM_GAP_ANALYSIS.md  IMPROVEMENT_PLAN.md  MEMORY_MODEL.md  PHASE6_OPERATIONAL_HARDENING.md  SELF_INSTALL.md  SOLE_PROVIDER_CUTOVER.md  VISUALIZER.md
graph_export/: graph.html
plugins/entropicmem/: README.md  __init__.py  _backend.py  plugin.yaml
scripts/: analyze_migration.py  entropicmem_backup.sh  entropicmem_cron_phase1_verify.sh  entropicmem_cron_remember.py  entropicmem_cycle.py  entropicmem_health_check.py  entropicmem_restore.sh  entropicmem_rollback.sh  fix_entropicmem.py  fix_line.py  full_sync.py  import_canonical_facts.py  migrate_and_monitor.py  notion_entropicmem_sync.py  phase5_apply.py  verify_provider.py
skills/entropicmem/: SETUP.md  SKILL.md
skills/entropicmem/references/: CLI_REFERENCE.md  HERMES_INTEGRATION.md  MEMORY_MODEL.md  VAULT_SCHEMA.md  VISUALIZER.md
skills/entropicmem/scripts/: __init__.py  entropicmem.py  graph_export.py  index.py  memory_engine.py  mnemosyne_bridge.py  retrieval.py  vault.py
skills/entropicmem/templates/vault/: AGENTS.md  SCHEMA.md  index.md  log.md
skills/memory/entropicmem-cron-writes/: SKILL.md
tests/: conftest.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase8.py  test_smart_context.py  test_vault.py
