[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entropicmem"
version = "2.0.0"
description = "Standalone agent memory system for Hermes Agent — SQLite FTS5 memory engine, Markdown vault, visual graph, and 14-command knowledge loop."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ufonik", email = "Ufonik88@users.noreply.github.com"},
]
keywords = ["agent", "memory", "hermes", "knowledge", "sqlite", "fts5"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0"]
graph = ["graphviz>=0.20"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/Ufonik88/EntropicMem"
Repository = "https://github.com/Ufonik88/EntropicMem"
Issues = "https://github.com/Ufonik88/EntropicMem/issues"
Changelog = "https://github.com/Ufonik88/EntropicMem/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/entropicmem/scripts"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
